# VO_pipeline

./: .gitignore
VAMR_Exercises/02_pnp - exercise/: motion.avi
VAMR_Exercises/02_pnp - exercise/matlab_code/: main.m
VAMR_Exercises/02_pnp - exercise/python_code/: arrow_3d.py  estimate_pose_dlt.py  main.py  reproject_points.py  side_by_side.py
VAMR_Exercises/03_detect_describe_match - exercise/matlab_code/: harris.m  main.m  shi_tomasi.m
VAMR_Exercises/03_detect_describe_match - exercise/python_code/: describe_keypoints.py  harris.py  main.py  match_descriptors.py  profile_output.lprof  profile_output_2026-06-24T151238.txt  profile_output_2026-06-24T153616.txt  profile_output_2026-06-24T154600.txt  profile_output_2026-06-24T154748.txt  profile_output_2026-06-24T154845.txt  profile_output_2026-06-24T154902.txt  select_keypoints.py  shi_tomasi.py
VAMR_Exercises/04_sift - exercise/: requirements.txt
VAMR_Exercises/04_sift - exercise/python_code/: compute_blurred_images.py  compute_descriptors.py  compute_difference_of_gaussians.py  compute_image_pyramid.py  extract_keypoints.py  main.py
VAMR_Exercises/exercise_01 - cube_projection/01_Vectorization/: image_mask.py
VAMR_Exercises/exercise_01 - cube_projection/python_code/: main.py  pose_vector_to_transformation_matrix.py  requirements.txt  undistort_image_vectorized.py
VAMR_Exercises/exercise_01/01_Vectorization/: draw.py
linalg/: CMakeLists.txt
linalg/benchmarks/: bench.cpp
linalg/include/: matrix.hpp  vector3.hpp
linalg/src/: matrix.cpp  vector3.cpp
linalg/tests/: test_matrix.cpp  test_vector3.cpp
(+4 files in other folders)
